--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+#home{
+  background-color:#111d5e;
+}
+.container-fluid{
+  padding:3% 15% 7%;
+  position: relative;
+  z-index: 1;
+
+
+
+}
+
 
 #title{
   background-color:#111d5e;
@@ -13,20 +25,31 @@
 /* nav bar */
 .navbar{
   padding:0 0 4rem;
+ 
 }
 .navbar-brand{
   font-family:"Ubuntu";
   font-size:2.5rem;
+  
 
 }
 
 .nav-item{
   padding:0 10 15rem;
 }
-.nav-link{
+.nav-lik{
   font-size:2.0rem;
   font-family: "Montserrat-light";
   margin-left: 0.5em;
+  text-align: center;
+ 
+}
+.nav-link{
+  font-size:1.7rem;
+  font-family: "Montserrat-light";
+  margin-left: 0.5em;
+  text-align: center;
+ 
 }
 
 h1{
@@ -150,7 +173,7 @@ margin: 20px;
 }
 #footer{
   text-align: center;
-  font-size: 2em;
+  font-size: 1.2em;
   font-weight: bolder;
 
 background-color: white;
